<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.doubled.wahanaekspedisi.activity.Rates">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="45dp"
                android:text="HELP"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="1. Cek Ongkos Kirim (Rates)" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginTop="3dp"
                android:text="@string/help_rates" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginTop="3dp"
                android:text="@string/help_rates1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="2. Cek Resi (Tracking)" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginTop="3dp"
                android:text="@string/help_tracking" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginTop="3dp"
                android:text="@string/help_tracking1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="3. Aplikasi Error?" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginTop="3dp"
                android:text="@string/bantuan" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnBantuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Kirim Bantuan"
        android:textColor="@color/WhiteSmoke"
        android:background="@color/primary_dark"/>

</RelativeLayout>