<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.doubled.wahanaekspedisi.activity.Rates">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="45dp"
            android:text="About"
            android:textStyle="bold"/>

        <TextView
            android:layout_below="@id/label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:text="@string/about" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:text="@string/about1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:text="@string/about2" />

    </LinearLayout>

    <TextView
        android:layout_marginBottom="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:text="Made In Malang \n http://doubled.web.id"
        android:layout_alignParentBottom="true"
        android:autoLink="web"
        android:textStyle="italic|bold"/>


</RelativeLayout>